grid modifier added

--- a/idnex.html
+++ b/idnex.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>START WARS HuB</h1>
+        <h1>START WARS HuB</h1>  
         <!-- <ul id="Options">
             <li><button  id="films">films</button></li>
             <li><button id="people">people</button></li>
@@ -24,6 +24,11 @@
     <div class="planets">
         
         <h2>Planets</h2> 
+        <select id="gridAjust">
+            <option value="1">1 col</option>
+            <option selected value="2" >2 col</option>
+            <option value="3">3 col</option>
+        </select>
         <div id="main">
 
         </div>
