fixed pagination & more info blocks

--- a/idnex.html
+++ b/idnex.html
@@ -24,6 +24,7 @@
     <div class="planets">
         
         <h2>Planets</h2> 
+        <input id="search" type="text">
         <select id="gridAjust">
             <option value="1">1 col</option>
             <option selected value="2" >2 col</option>
@@ -33,8 +34,8 @@
 
         </div>
         <div class="pagination">
-            <button id="prev" onclick="test(),PrevPage()">previous</button>
-            <button id="next" onclick="test(),NextPage()">next</button>
+            <button id="prev" onclick="PrevPage()">previous</button>
+            <button id="next" onclick="NextPage()">next</button>
             
         </div>
     </div>
