search bar done

--- a/idnex.html
+++ b/idnex.html
@@ -24,7 +24,9 @@
     <div class="planets">
         
         <h2>Planets</h2> 
-        <input id="search" type="text">
+            <input id="search" type="text">
+            <input id="searchBtn"type="submit">
+        
         <select id="gridAjust">
             <option value="1">1 col</option>
             <option selected value="2" >2 col</option>
