pop up redesigned

--- a/idnex.html
+++ b/idnex.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>START WARS HuB</h1>  
+        <h1>STAR WARS HuB</h1>  
         <!-- <ul id="Options">
             <li><button  id="films">films</button></li>
             <li><button id="people">people</button></li>
