multi nav added

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <h1>STAR WARS HuB</h1>  
-        <!-- <ul id="Options">
+        <ul id="Options">
             <li><button  id="films">films</button></li>
             <li><button id="people">people</button></li>
-            <li><button id="planets">planets</button></li>
-            <li><button id="species">species</button></li>
+            <li><button id="planets" class="active">planets</button></li>
+            <li><button id="species " >species</button></li>
             <li><button id="starships">starships</button></li>
             <li><button id="vehicles">vehicles</button></li>
-        </ul> -->
+        </ul>
     </header>
     
     <div class="line"></div>
