people search option added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>STAR WARS HuB</h1>  
         <ul id="Options">
             <!-- <li><button onclick="option(this.id)"  id="films">films</button></li> -->
-            <!-- <li><button onclick="option(this.id)" id="people">people</button></li> -->
+            <li><button onclick="option(this.id)" id="people">people</button></li>
             <li><button onclick="option(this.id)" id="planets">planets</button></li>
             <li><button onclick="option(this.id)" id="species" >species</button></li>
             <li><button onclick="option(this.id)" id="starships">starships</button></li>
