--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>STAR WARS HuB</h1>  
         <ul id="Options">
-            <!-- <li><button onclick="option(this.id)"  id="films">films</button></li> -->
+            <li><button onclick="option(this.id)"  id="films">films</button></li>
             <li><button onclick="option(this.id)" id="people">people</button></li>
             <li><button onclick="option(this.id)" id="planets">planets</button></li>
             <li><button onclick="option(this.id)" id="species" >species</button></li>
